--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -7,6 +7,7 @@
     <div class="list-group list-reset">
       <a href="#"
         class="list-group-item list-group-item-action"
+        (click)="buscar(item)"
         *ngFor="let item of historial">
         {{item |titlecase}}
       </a>
